--- a/index.html
+++ b/index.html
@@ -28,14 +28,24 @@
           <li class="page-nav__item"><a href="" class="page-nav__link link">Контакти</a></li>
         </ul>
       </nav>
+
       <ul class="contacts list">
-        <li class="item">      <a href="mailto:info@devstudio.com" class="contacts-link link"
-        >info@devstudio.com</a>
-</li>
-        <li class="item">      <a href="tel:+380994744111" class="contacts-link link"
-        >+38 099 47 44 11</a
-      >
-</li>
+
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contacts-link link">
+
+            <svg class="icon-mail" width="16px" height="12px">
+            <use href="./images/sprite.svg#icon-mail"></use>
+          </svg>info@devstudio.com</a>
+        </li>
+
+        <li class="contacts-item">
+          <a href="tel:+380994744111" class="contacts-link link">
+
+            <svg class="icon-phone" width="10px" height="16px">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg>+38 099 47 44 11</a>
+        </li>
       </ul>
       </div>
     </header>
@@ -51,27 +61,47 @@
         <div class="container">        
         <ul class="key-positions list">
         <li class="key-position__item">
+          <div class="thumb-feature">
+            <svg class="feature-icon" width="70" height="70">
+              <use href="./images/sprite.svg#feature-icon1"></use>
+            </svg>
+          </div>
           <h3 class="key-position-title">Внимание к деталям</h3>
           <p class="key-position-text">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
-        <li class="key-position__item">
+        <li class="key-position__item">          
+          <div class="thumb-feature">
+            <svg class="feature-icon" width="70" height="70">
+              <use href="./images/sprite.svg#feature-icon2"></use>
+            </svg>
+          </div>
           <h3 class="key-position-title">Пунктуальность</h3>
           <p class="key-position-text">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
           </p>
         </li>
-        <li class="key-position__item">
+        <li class="key-position__item">          
+          <div class="thumb-feature">
+            <svg class="feature-icon" width="70" height="70">
+              <use href="./images/sprite.svg#feature-icon3"></use>
+            </svg>
+          </div>
           <h3 class="key-position-title">Планирование</h3>
           <p class="key-position-text">
             Равным образом консультация с широким активом в значительной
             степени обуславливает.
           </p>
         </li>
-        <li class="key-position__item">
+        <li class="key-position__item">          
+          <div class="thumb-feature">
+            <svg class="feature-icon" width="70" height="70">
+              <use href="./images/sprite.svg#feature-icon4"></use>
+            </svg>
+          </div>
           <h3 class="key-position-title">Современные технологии</h3>
           <p class="key-position-text">
             Значимость этих проблем настолько очевидна, что реализация
@@ -124,19 +154,84 @@
               <div class="worker-list__info">              
                 <h3 class="worker-list__title">Игорь Демьяненко</h3>
                 <p class="worker-list__position">Product Designer</p>
+                <ul class="social list">
+                  <li class="social-item">
+                    <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
+                      <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg> </a>
+                      </li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
+                    <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
+                    <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
+                    <svg class="social-item__icon " width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg> </a>
+                </li>
+                </ul>
               </div>
             </li>
             <li class="worker-list__item">
               <img src="images/img5.jpg" alt="Фото Ольга Репина" width="270" />
               <div class="worker-list__info">
               <h3 class="worker-list__title">Ольга Репина</h3>
-              <p class="worker-list__position">Frontend Developer</p></div>
+              <p class="worker-list__position">Frontend Developer</p>
+              <ul class="social list">
+                <li class="social-item">
+                  <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
+                    <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg> </a>
+                    </li>
+                <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
+                  <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
+                  <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
+                  <svg class="social-item__icon " width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg> </a>
+              </li>
+              </ul>
+</div>
             </li>
             <li class="worker-list__item">
               <img src="images/img6.jpg" alt="Фото Николай Тарасов" width="270" />
               <div class="worker-list__info">
                 <h3 class="worker-list__title">Николай Тарасов</h3>
                 <p class="worker-list__position">Marketing</p>
+                <ul class="social list">
+                  <li class="social-item">
+                    <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
+                      <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg> </a>
+                      </li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
+                    <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
+                    <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
+                    <svg class="social-item__icon " width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg> </a>
+                </li>
+                </ul>
+
               </div>
             </li>
             <li class="worker-list__item">
@@ -144,7 +239,66 @@
               <div class="worker-list__info" >
                 <h3 class="worker-list__title">Михаил Ермаков</h3>
                 <p class="worker-list__position">UI Designer</p>
+                <ul class="social list">
+                  <li class="social-item">
+                    <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
+                      <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg> </a>
+                      </li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
+                    <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
+                    <svg class="social-item__icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
+                    <svg class="social-item__icon " width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg> </a>
+                </li>
+                </ul>
               </div>           
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Партнери -->
+      <section class="section">
+        <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="partners list">
+            <li><a class="partner__item link" href="#">
+              <svg class="icon-logo" weight="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-001"></use>
+              </svg> </a>
+            </li>
+            <li><a class="partner__item link" href="#">
+              <svg class="icon-logo" weight="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-002"></use>
+              </svg></a>
+            </li>
+            <li><a class="partner__item link" href="#" >
+              <svg class="icon-logo" weight="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-003"></use>
+              </svg></a>
+            </li>
+            <li><a class="partner__item link" href="#">
+              <svg class="icon-logo" weight="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-004"></use>
+              </svg></a>
+            </li>
+            <li><a class="partner__item link" href="#">
+              <svg class="icon-logo" weight="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-005"></use>
+              </svg></a>
+            </li>
+            <li><a class="partner__item link" href="#">
+              <svg class="icon-logo" weight="106" height="60">
+                <use href="./images/sprite.svg#icon-logo-006"></use>
+              </svg></a>
             </li>
           </ul>
         </div>
@@ -153,15 +307,42 @@
     <!--Підвал з контактами-->
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo link"
-        ><span class="accent-logo">Web</span
-        ><span class="logo-inverse">Studio</span></a>
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@example.com" class="footer-contacts link"
-          >info@example.com</a>
-      <a href="tel:+380991111111" class="footer-contacts link"
-          >+38 099 111 11 11</a>
-      </div>
+        <div class="musk">
+          <div class="footer-item">
+            <a href="index.html" class="logo link">
+              <span class="accent-logo">Web</span>
+              <span class="logo-inverse">Studio</span></a>
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          <a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a>
+          <a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a>
+            </div>
+
+          <div class="footer-item">
+              <span class="social-label">присоединяйтесь</span>
+              <ul class="social list">
+                <li class="item"><a class="social-footer link" href="" aria-label="Инстаграмм" > 
+                    <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg> </a>
+                    </li>
+                <li class="item"><a class="social-footer link" href="" aria-label="Твиттер">
+                  <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="item"><a class="social-footer link" href="" aria-label="Фейсбук">
+                  <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="item"><a class="social-footer link" href="" aria-label="Линкедин"> 
+                  <svg class="social-item__icon " width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg> </a>
+              </li>
+              </ul>
+            </div>
+    
+        </div>
+        </div>
     </footer>
   </body>
 </html>
