summary edeit before finishing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="contacts-item">
           <a href="mailto:info@devstudio.com" class="contacts-link link">
 
-            <svg class="icon-mail" width="16px" height="12px">
+            <svg class="icon-mail" width="16" height="12">
             <use href="./images/sprite.svg#icon-mail"></use>
           </svg>info@devstudio.com</a>
         </li>
@@ -42,7 +42,7 @@
         <li class="contacts-item">
           <a href="tel:+380994744111" class="contacts-link link">
 
-            <svg class="icon-phone" width="10px" height="16px">
+            <svg class="icon-phone" width="10" height="16">
               <use href="./images/sprite.svg#icon-phone"></use>
             </svg>+38 099 47 44 11</a>
         </li>
@@ -307,7 +307,7 @@
     <!--Підвал з контактами-->
     <footer class="footer">
       <div class="container">
-        <div class="musk">
+        <div class="footer-box">
           <div class="footer-item">
             <a href="index.html" class="logo link">
               <span class="accent-logo">Web</span>
@@ -316,9 +316,8 @@
           <a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a>
           <a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a>
             </div>
-
           <div class="footer-item">
-              <span class="social-label">присоединяйтесь</span>
+              <span class="join-label">присоединяйтесь</span>
               <ul class="social list">
                 <li class="item"><a class="social-footer link" href="" aria-label="Инстаграмм" > 
                     <svg class="social-item__icon" width="20" height="20">
