--- a/portfolio.html
+++ b/portfolio.html
@@ -192,15 +192,41 @@
     <!--Підвал з контактами-->
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo link"
-        ><span class="accent-logo">Web</span
-        ><span class="logo-inverse">Studio</span></a>
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@example.com" class="footer-contacts link"
-          >info@example.com</a>
-      <a href="tel:+380991111111" class="footer-contacts link"
-          >+38 099 111 11 11</a>
-      </div>
+        <div class="footer-box">
+          <div class="footer-item">
+            <a href="index.html" class="logo link">
+              <span class="accent-logo">Web</span>
+              <span class="logo-inverse">Studio</span></a>
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          <a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a>
+          <a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a>
+            </div>
+          <div class="footer-item">
+              <span class="join-label">присоединяйтесь</span>
+              <ul class="social list">
+                <li class="item"><a class="social-footer link" href="" aria-label="Инстаграмм" > 
+                    <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg> </a>
+                    </li>
+                <li class="item"><a class="social-footer link" href="" aria-label="Твиттер">
+                  <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="item"><a class="social-footer link" href="" aria-label="Фейсбук">
+                  <svg class="social-item__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="item"><a class="social-footer link" href="" aria-label="Линкедин"> 
+                  <svg class="social-item__icon " width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg> </a>
+              </li>
+              </ul>
+            </div>
+    
+        </div>
+        </div>
     </footer>
   </body>
 </html>
