--- a/portfolio.html
+++ b/portfolio.html
@@ -17,28 +17,38 @@
         <nav>
           <ul class="page-nav list">
             <li class="page-nav__item">
-              <a href="./index.html" class="page-nav__link link"
+              <a href="./index.html" class="page-nav__link current link"
                 >Студія</a
               >
             </li>
             <li class="page-nav__item">
-              <a href="./portfolio.html" class="page-nav__link current link">Портфоліо</a>
+              <a href="./portfolio.html" class="page-nav__link link">Портфоліо</a>
             </li>
             <li class="page-nav__item"><a href="" class="page-nav__link link">Контакти</a></li>
           </ul>
         </nav>
+  
         <ul class="contacts list">
-          <li class="item">      <a href="mailto:info@devstudio.com" class="contacts-link link"
-          >info@devstudio.com</a>
-  </li>
-          <li class="item">      <a href="tel:+380994744111" class="contacts-link link"
-          >+38 099 47 44 11</a
-        >
-  </li>
+  
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link link">
+  
+              <svg class="icon-mail" width="16" height="12">
+              <use href="./images/sprite.svg#icon-mail"></use>
+            </svg>info@devstudio.com</a>
+          </li>
+  
+          <li class="contacts-item">
+            <a href="tel:+380994744111" class="contacts-link link">
+  
+              <svg class="icon-phone" width="10" height="16">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>+38 099 47 44 11</a>
+          </li>
         </ul>
         </div>
       </header>
-          <main>
+            <main>
         <!-- КНОПКИ ФІЛЬТРУВАННЯ -->
       <section class="section">
         <div class="container">
