--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
         <nav>
           <ul class="page-nav list">
             <li class="page-nav__item">
-              <a href="./index.html" class="page-nav__link current link"
+              <a href="./index.html" class="page-nav__link  link"
                 >Студія</a
               >
             </li>
             <li class="page-nav__item">
-              <a href="./portfolio.html" class="page-nav__link link">Портфоліо</a>
+              <a href="./portfolio.html" class="page-nav__link current link">Портфоліо</a>
             </li>
             <li class="page-nav__item"><a href="" class="page-nav__link link">Контакти</a></li>
           </ul>
