correct display block

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
           </ul>
         <ul class="project list">
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p1.jpg"
                 alt="Изображение сайта Технокряк"
@@ -84,7 +84,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p2.jpg"
                 alt="Изображение постера Нью Орлеан"
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p3.jpg"
                 alt="Изображение приложения ресторана Seafood"
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p4.jpg"
                 alt="Изображение наушников проекта Прайм"
@@ -126,7 +126,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p5.jpg"
                 alt="Изображение коробок"
@@ -140,7 +140,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p6.jpg"
                 alt="Изображения сайта"
@@ -154,7 +154,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p7.jpg"
                 alt="Изображение дизайна книги"
@@ -168,7 +168,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p8.jpg"
                 alt="Изображение дизайна"
@@ -182,7 +182,7 @@
             </a>
           </li>
           <li class="project__item">
-            <a href="" class="link">
+            <a href="" class="project-item-link link">
               <img
                 src="./images/p9.jpg"
                 alt="Скриншот приложения компании Growing Business"
