--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="mailto:info@devstudio.com" class="contacts-link link">
 
             <svg class="icon-mail" width="16" height="12">
-            <use href="./images/sprite.svg#icon-mail"></use>
+            <use href="./images/icons.svg#icon-mail"></use>
           </svg>info@devstudio.com</a>
         </li>
 
@@ -42,7 +42,7 @@
           <a href="tel:+380994744111" class="contacts-link link">
 
             <svg class="icon-phone" width="10" height="16">
-              <use href="./images/sprite.svg#icon-phone"></use>
+              <use href="./images/icons.svg#icon-phone"></use>
             </svg>+38 099 47 44 11</a>
         </li>
       </ul>
@@ -62,7 +62,7 @@
         <li class="key-position__item">
           <div class="thumb-feature">
             <svg class="feature-icon" width="70" height="70">
-              <use href="./images/sprite.svg#feature-icon1"></use>
+              <use href="./images/icons.svg#feature-icon1"></use>
             </svg>
           </div>
           <h3 class="key-position-title">Внимание к деталям</h3>
@@ -74,7 +74,7 @@
         <li class="key-position__item">          
           <div class="thumb-feature">
             <svg class="feature-icon" width="70" height="70">
-              <use href="./images/sprite.svg#feature-icon2"></use>
+              <use href="./images/icons.svg#feature-icon2"></use>
             </svg>
           </div>
           <h3 class="key-position-title">Пунктуальность</h3>
@@ -86,7 +86,7 @@
         <li class="key-position__item">          
           <div class="thumb-feature">
             <svg class="feature-icon" width="70" height="70">
-              <use href="./images/sprite.svg#feature-icon3"></use>
+              <use href="./images/icons.svg#feature-icon3"></use>
             </svg>
           </div>
           <h3 class="key-position-title">Планирование</h3>
@@ -98,7 +98,7 @@
         <li class="key-position__item">          
           <div class="thumb-feature">
             <svg class="feature-icon" width="70" height="70">
-              <use href="./images/sprite.svg#feature-icon4"></use>
+              <use href="./images/icons.svg#feature-icon4"></use>
             </svg>
           </div>
           <h3 class="key-position-title">Современные технологии</h3>
@@ -157,20 +157,20 @@
                   <li class="social-item">
                     <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
                       <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg> </a>
                       </li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
                     <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
                     <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a></li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
                     <svg class="social-item__icon " width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg> </a>
                 </li>
                 </ul>
@@ -185,20 +185,20 @@
                 <li class="social-item">
                   <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
                     <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg> </a>
                     </li>
                 <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
                   <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
                 <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
                   <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
                 <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
                   <svg class="social-item__icon " width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg> </a>
               </li>
               </ul>
@@ -213,20 +213,20 @@
                   <li class="social-item">
                     <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
                       <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg> </a>
                       </li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
                     <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
                     <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a></li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
                     <svg class="social-item__icon " width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg> </a>
                 </li>
                 </ul>
@@ -242,20 +242,20 @@
                   <li class="social-item">
                     <a class="social-item-link link" href="" aria-label="Инстаграмм" > 
                       <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg> </a>
                       </li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Твиттер">
                     <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Фейсбук">
                     <svg class="social-item__icon" width="20" height="20">
-                      <use href="./images/sprite.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a></li>
                   <li class="social-item"><a class="social-item-link link" href="" aria-label="Линкедин"> 
                     <svg class="social-item__icon " width="20" height="20">
-                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg> </a>
                 </li>
                 </ul>
@@ -271,32 +271,32 @@
           <ul class="partners list">
             <li><a class="partner__item link" href="#">
               <svg class="icon-logo" weight="40" height="52">
-                <use href="./images/sprite.svg#icon-logo-001"></use>
+                <use href="./images/icons.svg#icon-logo-001"></use>
               </svg> </a>
             </li>
             <li><a class="partner__item link" href="#">
               <svg class="icon-logo" weight="46" height="52">
-                <use href="./images/sprite.svg#icon-logo-002"></use>
+                <use href="./images/icons.svg#icon-logo-002"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#" >
               <svg class="icon-logo" weight="44" height="42">
-                <use href="./images/sprite.svg#icon-logo-003"></use>
+                <use href="./images/icons.svg#icon-logo-003"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#">
               <svg class="icon-logo" weight="85" height="41">
-                <use href="./images/sprite.svg#icon-logo-004"></use>
+                <use href="./images/icons.svg#icon-logo-004"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#">
               <svg class="icon-logo" weight="63" height="42">
-                <use href="./images/sprite.svg#icon-logo-005"></use>
+                <use href="./images/icons.svg#icon-logo-005"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#">
               <svg class="icon-logo" weight="94" height="44">
-                <use href="./images/sprite.svg#icon-logo-006"></use>
+                <use href="./images/icons.svg#icon-logo-006"></use>
               </svg></a>
             </li>
           </ul>
@@ -320,25 +320,24 @@
               <ul class="social list">
                 <li class="item"><a class="social-footer link" href="" aria-label="Инстаграмм" > 
                     <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg> </a>
                     </li>
                 <li class="item"><a class="social-footer link" href="" aria-label="Твиттер">
                   <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
                 <li class="item"><a class="social-footer link" href="" aria-label="Фейсбук">
                   <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
                 <li class="item"><a class="social-footer link" href="" aria-label="Линкедин"> 
                   <svg class="social-item__icon " width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg> </a>
               </li>
               </ul>
             </div>
-    
         </div>
         </div>
     </footer>
