--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             <a href="mailto:info@devstudio.com" class="contacts-link link">
   
               <svg class="icon-mail" width="16" height="12">
-              <use href="./images/sprite.svg#icon-mail"></use>
+              <use href="./images/icons.svg#icon-mail"></use>
             </svg>info@devstudio.com</a>
           </li>
   
@@ -42,7 +42,7 @@
             <a href="tel:+380994744111" class="contacts-link link">
   
               <svg class="icon-phone" width="10" height="16">
-                <use href="./images/sprite.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>+38 099 47 44 11</a>
           </li>
         </ul>
@@ -216,25 +216,24 @@
               <ul class="social list">
                 <li class="item"><a class="social-footer link" href="" aria-label="Инстаграмм" > 
                     <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg> </a>
                     </li>
                 <li class="item"><a class="social-footer link" href="" aria-label="Твиттер">
                   <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
                 <li class="item"><a class="social-footer link" href="" aria-label="Фейсбук">
                   <svg class="social-item__icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
                 <li class="item"><a class="social-footer link" href="" aria-label="Линкедин"> 
                   <svg class="social-item__icon " width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg> </a>
               </li>
               </ul>
             </div>
-    
         </div>
         </div>
     </footer>
