--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
           <li class="page-nav__item"><a href="" class="page-nav__link link">Контакти</a></li>
         </ul>
       </nav>
-
       <ul class="contacts list">
-
         <li class="contacts-item">
           <a href="mailto:info@devstudio.com" class="contacts-link link">
 
@@ -37,10 +35,8 @@
             <use href="./images/icons.svg#icon-mail"></use>
           </svg>info@devstudio.com</a>
         </li>
-
         <li class="contacts-item">
           <a href="tel:+380994744111" class="contacts-link link">
-
             <svg class="icon-phone" width="10" height="16">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>+38 099 47 44 11</a>
@@ -57,7 +53,8 @@
       </section>
       <!--Особливості роботи команди-->
       <section class="section">
-        <div class="container">        
+        <div class="container">
+          <h2 class="visually-hidden">особенности работы компании</h2>        
         <ul class="key-positions list">
         <li class="key-position__item">
           <div class="thumb-feature">
@@ -270,32 +267,32 @@
         <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="partners list">
             <li><a class="partner__item link" href="#">
-              <svg class="icon-logo" weight="40" height="52">
+              <svg class="icon-logo" width="40" height="52">
                 <use href="./images/icons.svg#icon-logo-001"></use>
               </svg> </a>
             </li>
             <li><a class="partner__item link" href="#">
-              <svg class="icon-logo" weight="46" height="52">
+              <svg class="icon-logo" width="46" height="52">
                 <use href="./images/icons.svg#icon-logo-002"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#" >
-              <svg class="icon-logo" weight="44" height="42">
+              <svg class="icon-logo" width="44" height="42">
                 <use href="./images/icons.svg#icon-logo-003"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#">
-              <svg class="icon-logo" weight="85" height="41">
+              <svg class="icon-logo" width="85" height="41">
                 <use href="./images/icons.svg#icon-logo-004"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#">
-              <svg class="icon-logo" weight="63" height="42">
+              <svg class="icon-logo" width="63" height="42">
                 <use href="./images/icons.svg#icon-logo-005"></use>
               </svg></a>
             </li>
             <li><a class="partner__item link" href="#">
-              <svg class="icon-logo" weight="94" height="44">
+              <svg class="icon-logo" width="94" height="44">
                 <use href="./images/icons.svg#icon-logo-006"></use>
               </svg></a>
             </li>
