--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,7 @@
         <nav>
           <ul class="page-nav list">
             <li class="page-nav__item">
-              <a href="./index.html" class="page-nav__link  link"
-                >Студія</a
-              >
+              <a href="./index.html" class="page-nav__link  link">Студія</a>
             </li>
             <li class="page-nav__item">
               <a href="./portfolio.html" class="page-nav__link current link">Портфоліо</a>
@@ -27,21 +25,17 @@
             <li class="page-nav__item"><a href="" class="page-nav__link link">Контакти</a></li>
           </ul>
         </nav>
-  
-        <ul class="contacts list">
-  
-          <li class="contacts-item">
+          <ul class="contacts list">
+            <li class="contacts-item">
             <a href="mailto:info@devstudio.com" class="contacts-link link">
   
               <svg class="icon-mail" width="16" height="12">
               <use href="./images/icons.svg#icon-mail"></use>
             </svg>info@devstudio.com</a>
           </li>
-  
-          <li class="contacts-item">
+            <li class="contacts-item">
             <a href="tel:+380994744111" class="contacts-link link">
-  
-              <svg class="icon-phone" width="10" height="16">
+                <svg class="icon-phone" width="10" height="16">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>+38 099 47 44 11</a>
           </li>
@@ -69,6 +63,7 @@
               <button type="button" class="filter-list-button">Маркетинг</button>
             </li>
           </ul>
+          <h2 class="visually-hidden">Список проектов компании</h2>
         <ul class="project list">
           <li class="project__item">
             <a href="" class="project-item-link link">
